fix: text align center in vote modal

--- a/frontend/src/styles/room.scss
+++ b/frontend/src/styles/room.scss
@@ -175,6 +175,10 @@ $lose: #ff968d;
   }
 }
 
+.vote-modal-h3-title {
+  text-align: center;
+}
+
 .vote-component {
   width: 100%;
   display: flex;
